force-app/main/default/objects/Org_Pool__c/Org_Pool__c.object-meta.xml
<CustomObject>
    <description>pooled orgs from the deployer</description>
    <label>Org Pool</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>