force-app/main/default/objects/Org_Pool__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>branch on a github repo</description>
    <inlineHelpText>branch on a github repo</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>