force-app/main/default/objects/Org_Pool__c/fields/Description__c.field-meta.xml
<CustomField>
    <label>Description</label>
    <type>LongTextArea</type>
    <fullName>Description__c</fullName>
    <length>131072</length>
    <description>describe the org pool (demo, workshop, product, etc)</description>
    <inlineHelpText>describe the org pool (demo, workshop, product, etc)</inlineHelpText>
</CustomField>