force-app/main/default/objects/Org_Pool__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Pre-release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>