force-app/main/default/objects/Org_Pool__c/fields/Github_User__c.field-meta.xml
<CustomField>
    <fullName>Github_User__c</fullName>
    <description>username on github (ex: mshanemc)</description>
    <inlineHelpText>username on github (ex: mshanemc)</inlineHelpText>
    <label>Github User</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>