force-app/main/default/objects/Org_Pool__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>how many hours an org should last before it&#39;s destroyed</description>
    <inlineHelpText>how many hours an org should last before it&#39;s destroyed</inlineHelpText>
    <label>Hours</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>