force-app/main/default/objects/Org_Pool__c/fields/Public__c.field-meta.xml
<CustomField>
    <fullName>Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Visible to the org pool bot</description>
    <inlineHelpText>Visible to the org pool bot</inlineHelpText>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>