force-app/main/default/objects/Org_Pool__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>how many to normally keep on hand</description>
    <inlineHelpText>how many to normally keep on hand</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>