force-app/main/default/objects/Org_Pool__c/fields/Repo__c.field-meta.xml
<CustomField>
    <fullName>Repo__c</fullName>
    <description>repo name on github</description>
    <externalId>true</externalId>
    <inlineHelpText>repo name on github</inlineHelpText>
    <label>Repo</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>