force-app/main/default/objects/Org_Pool__c/listViews/All_Pools.listView-meta.xml
<ListView>
    <fullName>All_Pools</fullName>
    <columns>NAME</columns>
    <columns>Github_User__c</columns>
    <columns>Repo__c</columns>
    <columns>Quantity__c</columns>
    <columns>Hours__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Pools</label>
</ListView>