force-app/main/default/objects/Org_Pool__c/listViews/Pre_Release.listView-meta.xml
<ListView>
    <fullName>Pre_Release</fullName>
    <columns>NAME</columns>
    <columns>Public__c</columns>
    <columns>Github_User__c</columns>
    <columns>Repo__c</columns>
    <columns>Quantity__c</columns>
    <columns>Hours__c</columns>
    <columns>Environment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Environment__c</field>
        <operation>equals</operation>
        <value>Pre-release</value>
    </filters>
    <label>Pre-Release</label>
</ListView>