force-app/main/default/objects/Org_Pool__c/listViews/Public_Pools.listView-meta.xml
<ListView>
    <fullName>Public_Pools</fullName>
    <columns>NAME</columns>
    <columns>Github_User__c</columns>
    <columns>Repo__c</columns>
    <columns>Quantity__c</columns>
    <columns>Hours__c</columns>
    <columns>Environment__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Public__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Public Pools</label>
</ListView>